<resources>
    <!-- PJ Account   <string name="google_maps_key">AIzaSyBvvnoJmlhkTU07hc3nYMMpxgwxxoR66TA</string>-->
    <!--  Miracle Account-->
    <string name="google_maps_key">AIzaSyC223E_1fOrNL7cpUZ_cuEbzBI-7xEmfbI</string>
    <string name="facebook_app_id">525330261654674</string>
    <string name="fb_login_protocol_scheme">fb525330261654674</string>

        <string name="app_name">Dronam Food Delivery</string>
<!--    <string name="app_name">Hotel</string>-->
    <string name="powered_by">Powered by</string>
    <string name="powered_by_hotel">HOTEL</string>

    <string name="powered_by_name">
        <font fgcolor="#000000">MANO</font> <font fgcolor="#13c7ac">R</font><font fgcolor="#000000">A</font>
    </string>

    <string name="status_success">SUCCESS</string>
    <string name="status_failed">FAILED</string>

    <string name="dronam">Dronam</string>
    <string name="food_delivery">Food Delivery</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="connect_with_facebook">Facebook</string>
    <string name="connect_with_google">Google</string>
    <string name="connect_with_mobile_no">Connect with Mobile Number</string>
    <string name="or">OR</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="need_help">Need Help ?</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>

    <string name="login_verify_awesome">Awesome,</string>
    <string name="login_verify_otp_text">We will auto detect the OTP sent to your number</string>
    <string name="otp_wait_for">Wait for</string>
    <string name="otp_message">is your Dronam verification OTP.</string>

    <string name="set_location">Set Location</string>
    <string name="location_permission_title">Location Permission Denied</string>
    <string name="location_permission_text">We use this permission to detect your current location and display restaurants near you.
    \nGrant this permission now!!!</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_profile">Profile</string>

    <string name="food">Food &amp; Drink experiences</string>
    <string name="restaurant_text">Restaurants</string>

    <string name="toolbar_location">Brose Near By Place</string>
    <string name="toolbar_set_delivery_location">Set you delivery location</string>
    <string name="location_search_box_text">Search for area or street...</string>

    <!--    <string name="toolbar_manage_addresses">Manage Addresses</string>-->
    <string name="saved_addresses">Saved Addresses</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="get_started_with_mobile">Get started with your mobile number</string>
    <string name="join_family">Join the Dronam family and wait no more, \nwhen you are hungry.</string>
    <string name="mobile_number">Your 10 digit mobile number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="see_more">See more</string>

    <string name="terms_and_privacy">By continuing, you agree to our \n
    <a href="https://www.dronam.com/privacy">Privacy Policy</a> &amp; <a href="https://www.dronam.com/#">Terms of Use</a></string>

    <string name="search_main_title">What can we \nserve you today?</string>
    <string name="search_box_text">Search for restaurants or dish...</string>
    <string name="search_button">SEARCH</string>

    <string name="cart_empty_title">Oops! Your cart is empty</string>
    <string name="cart_empty_text">Looks like you haven\'t added anything to your cart yet</string>

    <string name="past_orders_empty_title">Your past order history is empty</string>
    <string name="past_orders_empty_text">You haven\'t ordered anything yet. \nDon\'t stop hunger, Order now!!!</string>

    <string name="browse_menu">Browse Menu</string>
    <string name="add">Add</string>
    <string name="profile_favourite_restaurants">Favourite Restaurant</string>
    <string name="profile_manage_addresses">Manage Addresses</string>
    <string name="profile_payment_methods">Payment Methods</string>
    <string name="profile_reward_credits">Reward Credits</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_invite_friends">Invite Friends</string>

    <string name="past_orders">Past Orders</string>
    <string name="upcoming_orders">Upcoming</string>
    <string name="payment_method_amount_pay">Amount to pay : ₹ 580</string>

    <string name="paytm">PayTM</string>
    <string name="link_account">Link Account</string>
    <string name="phonepe">PhonePe</string>
    <string name="amazon_pay">Amazon Pay</string>
    <string name="freecharge">Freecharge</string>
    <string name="mobikwik">Mobikwik</string>
    <string name="pay_now">Pay Now</string>
    <string name="add_card">ADD CARD</string>
    <string name="save_and_pay_via_cards">Save and pay via cards</string>
    <string name="pay_on_delivery">PAY ON DELIVERY</string>
    <string name="pay_exact_change">Please provide exact change.</string>

    <string name="no_internet">No internet connection</string>
    <string name="something_went_wrong">Something went wrong, Please try again.</string>
    <string name="server_conn_lost">Server connection lost, Please try again.</string>
    <string name="title_activity_maps">Map</string>

    <string name="current_location">My Current Location</string>
    <string name="using_gps">Using GPS</string>

    <string name="incorrect_otp">Incorrect OTP.</string>
    <string name="rupees">₹</string>
    <string name="success">Success</string>

    <string name="order_placed_title">Order Placed</string>
    <string name="order_placed_message">You order is placed successfully.
        Delivery master will reach to you soon. Please provide exact change.</string>

    <string name="order_place_sms">Order Placed. \nOur delivery executive is on the way to your location to delivery your product.
    \nPlease provide exact change.</string>

    <string name="view_cart">View Cart</string>
    <string name="item">Item</string>
    <string name="items">Items</string>
    <string name="free">( Free )</string>
    <string name="free_delivery_for_orders_above_200">Now get free delivery for order above ₹ 200.</string>
    <string name="free_delivery_for_orders_above">Now get free delivery for order above ₹</string>
    <string name="contact_not_found">Contact number not found.</string>
    <string name="no_intent_available">No application available to handle this action.</string>

    <string name="pay_using_referral_points">Pay using Referral Points</string>
    <string name="balance">Balance : </string>
    <string name="referral_points_you_will_save">You will save</string>
    <string name="using">using</string>
    <string name="referral_points">Referral Points</string>
    <string name="balance_referral_points">Balance Referral Points</string>
    <string name="earnings_through_friends">Earnings through Friends</string>
    <string name="referral_credits">Referral Credits</string>

    <string name="restaurant_review1">Be it breakfast, Lunch or Dinner, this restaurant is really loved by me. This restaurant is my personal favourite. I do tell people to eat here when they ask me about a good veg restaurant nearby. Although there are other restaurants which are good, but this restaurant is the best according to me.</string>
    <string name="restaurant_review2">Best quality of food. Cost is average and quality of food is nice. Service is fast and nice. Food presentation 5 out of 5 star. Taste is great. Keep it up keep serving best food to customers.</string>
</resources>
