<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search" />

<!--    <item-->
<!--        android:id="@+id/menu_cart"-->
<!--        android:title="@string/menu_3"-->
<!--        android:icon="@drawable/ic_maps_local_restaurant" />-->

    <item
        android:id="@+id/menu_orders"
        android:title="@string/menu_orders"
        android:icon="@drawable/ic_like" />

    <item
        android:id="@+id/menu_profile"
        android:title="@string/menu_profile"
        android:icon="@drawable/ic_person" />

</menu>