<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="85dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.miracle.rajdhani.custom.MyTextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dronam"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="34dp"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="5dp"
                android:background="#ffffff" />

            <com.miracle.rajdhani.custom.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="9dp"
                android:text="@string/food_delivery"
                android:textColor="#f05421"
                android:textSize="20sp" />
        </LinearLayout>


        <com.miracle.rajdhani.custom.MyEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="55dp"
            android:layout_marginRight="35dp"
            android:background="#00000000"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="35dp"
            android:background="#33ffffff" />


        <com.miracle.rajdhani.custom.MyEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="35dp"
            android:background="#00000000"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="35dp"
            android:background="#33ffffff" />

        <com.miracle.rajdhani.custom.MyTextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="55dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/rectangle_orange"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_singUp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/rectangle_blue"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_facebook" />

        <com.miracle.rajdhani.custom.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/connect_with_facebook"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_singUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.miracle.rajdhani.custom.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <com.miracle.rajdhani.custom.MyTextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/sign_up"
            android:textColor="#d22532"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>
