<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    <ImageView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:src="@mipmap/transparent"-->
    <!--        android:scaleType="fitXY"-->
    <!--        />-->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/dronam"
        android:textColor="#fff"
        android:textSize="24dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_title"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <com.miracle.rajdhani.custom.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/main"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundwhite"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:src="@mipmap/username" />

                <com.miracle.rajdhani.custom.MyEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:drawablePadding="10dp"
                    android:hint="@string/username"
                    android:paddingLeft="10dp"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="13dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundwhite"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/pass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:src="@mipmap/password" />

                <com.miracle.rajdhani.custom.MyEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="13dp" />
            </LinearLayout>

            <com.miracle.rajdhani.custom.MyTextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_above="@+id/bottom"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.miracle.rajdhani.custom.MyTextView
                android:id="@+id/tv_createAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/create_account"
                android:textColor="#FFF" />

            <com.miracle.rajdhani.custom.MyTextView
                android:id="@+id/tv_needHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/need_help"
                android:textColor="#FFF" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
